--- a/StackOnlyJsonParser/StackOnlyJsonParser.csproj
+++ b/StackOnlyJsonParser/StackOnlyJsonParser.csproj
@@ -1,14 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net5.0</TargetFramework>
+		<TargetFramework>netstandard2.0</TargetFramework>
 		<LangVersion>preview</LangVersion>
-		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.6.0-3.final" PrivateAssets="all" />
-	  <PackageReference Include="System.Text.Json" Version="4.7.1" />
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.6.0-4.final" PrivateAssets="all" />
+		<PackageReference Include="System.Text.Json" Version="4.7.1" />
 	</ItemGroup>
 
 </Project>
