--- a/StackOnlyJsonParser/StackOnlyJsonParser.csproj
+++ b/StackOnlyJsonParser/StackOnlyJsonParser.csproj
@@ -3,11 +3,28 @@
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<LangVersion>preview</LangVersion>
+		<IsPackable>true</IsPackable>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<IncludeBuildOutput>true</IncludeBuildOutput>
+		<Authors>Tomasz Rewak</Authors>
+		<Company />
+		<RepositoryUrl>https://github.com/TomaszRewak/C-sharp-stack-only-json-parser</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<PackageTags>json, parser, span, utf8</PackageTags>
+		<PackageReleaseNotes>1.0.1 - Fixing nuge analyzers
+1.0.0 - Initial release</PackageReleaseNotes>
+		<Description>Stack only json deserialization using generators and System.Text.Json library</Description>
+		<Version>1.0.1</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.6.0-4.final" PrivateAssets="all" />
+		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.0.0" PrivateAssets="all" />
 		<PackageReference Include="System.Text.Json" Version="4.7.1" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
 	</ItemGroup>
 
 </Project>
