--- a/StackOnlyJsonParser/StackOnlyJsonParser.csproj
+++ b/StackOnlyJsonParser/StackOnlyJsonParser.csproj
@@ -15,6 +15,8 @@
 1.0.0 - Initial release</PackageReleaseNotes>
 		<Description>Stack only json deserialization using generators and System.Text.Json library</Description>
 		<Version>1.0.1</Version>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<Copyright>Tomasz Rewak</Copyright>
 	</PropertyGroup>
 
 	<ItemGroup>
