--- a/StackOnlyJsonParser/StackOnlyJsonParser.csproj
+++ b/StackOnlyJsonParser/StackOnlyJsonParser.csproj
@@ -2,7 +2,6 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
-		<LangVersion>preview</LangVersion>
 		<IsPackable>true</IsPackable>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<IncludeBuildOutput>true</IncludeBuildOutput>
@@ -11,9 +10,10 @@
 		<RepositoryUrl>https://github.com/TomaszRewak/C-sharp-stack-only-json-parser</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<PackageTags>json, parser, span, utf8</PackageTags>
-		<PackageReleaseNotes>1.1.0 - Adding lazy loader to support recursive data models
-1.0.2 - Fixing the parial struct ordering warnings
-1.0.1 - Fixing nuge analyzers
+		<PackageReleaseNotes>1.2.0 - Updating the dependencies to the net5.0
+1.1.0 - Adding lazy loader to support recursive data models
+1.0.2 - Fixing the partial struct ordering warnings
+1.0.1 - Fixing nuget analyzers
 1.0.0 - Initial release</PackageReleaseNotes>
 		<Description>Stack only json deserialization using generators and System.Text.Json library</Description>
 		<Version>1.1.0</Version>
@@ -22,9 +22,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.6.0-4.final" PrivateAssets="all" />
-		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.0.0" PrivateAssets="all" />
-		<PackageReference Include="System.Text.Json" Version="4.7.1" />
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.8.0" PrivateAssets="all" />
+		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.1" PrivateAssets="all" />
+		<PackageReference Include="System.Text.Json" Version="5.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
